--- a/index.html
+++ b/index.html
@@ -17,6 +17,87 @@
 	</head>
 
 	<body>
+        <!-- 상단바 -->
+        <nav class="nav-top" role="navigation">
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo"><img src="" alt="logo"></a><!-- 로고 -->
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="tiny material-icons">menu</i></a><!-- 모바일 화면에서 보이는 햄버거아이콘 -->
+                 <ul class="right hide-on-med-and-down"><!-- 데스크탑 화면 -->
+                    <li><a href="#">주문하기</a></li>
+                    <li><a href="#">주문조회</a></li>
+                    <li><a href="#">자주하는 질문</a></li>
+                    <li><a class="btn waves-effect waves-light" href="#">앱 다운로드</a></li>
+                 </ul>
+                 <ul class="side-nav" id="mobile-demo"><!-- 모바일 화면 상단바 -->
+                    <li><a href="#">주문하기</a></li>
+                    <li><a href="#">주문조회</a></li>
+                    <li><a href="#">자주하는 질문</a></li>
+                    <li><a class="btn waves-effect waves-light" href="#">앱 다운로드</a></li>
+                 </ul>
+           </div>
+         </nav>
+        <!-- //상단바 -->
+
+        <div class="row">
+            <!-- 위치 선택 -->
+            <div class="col s12">위치 선택</div>
+            
+            <!-- 품목 선택 -->
+            <div class="select-item col s12">
+              <ul class="tabs">
+                <li class="tab col s3"><a class="active" href="#test1">Test 1</a></li>
+                <li class="tab col s3"><a href="#test2">Test 2</a></li>
+                <li class="tab col s3"><a href="#test3">Test 3</a></li>
+                <li class="tab col s3"><a href="#test4">Test 4</a></li>
+                <li class="tab col s3"><a href="#test5">Test 5</a></li>
+                <li class="tab col s3"><a href="#test6">Test 6</a></li>
+                <li class="tab col s3"><a href="#test7">Test 7</a></li>
+                <li class="tab col s3"><a href="#test8">Test 8</a></li>
+              </ul>
+            </div>
+
+            <!-- 선택된 품목별 컨텐츠 -->
+            <div id="test1" class="col s12">Test 1</div>
+            <div id="test2" class="col s12">Test 2</div>
+            <div id="test3" class="col s12">Test 3</div>
+            <div id="test4" class="col s12">Test 4</div>
+            <div id="test5" class="col s12">Test 5</div>
+            <div id="test6" class="col s12">Test 6</div>
+            <div id="test7" class="col s12">Test 7</div>
+            <div id="test8" class="col s12">Test 8</div>  
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <div class="col s8">
+                    <div class="col s12">
+                        <div class="left">품목</div>
+                        <div class="right">0개</div>
+                    </div>
+                    <div class="col s12">
+                        <div class="left">합계</div>
+                        <div class="right">0원</div>
+                    </div>
+                </div>
+                <button class="btn waves-effect waves-light" type="submit">주문하기</button>
+            </div>
+        </div>
+
+        <footer class="page-footer">
+            <div class="row">
+                <div class="col s12">
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">회사소개</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">자주하는 질문</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">주문조회</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">PC 버전</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                COPYRIGHT © WASH APP KOREA. ALL RIGHTS RESERVED.
+            </div>
+        </footer>
 
     	<!--Import jQuery before materialize.js-->
     	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
