--- a/index.html
+++ b/index.html
@@ -43,28 +43,74 @@
             <div class="col s12">위치 선택</div>
             
             <!-- 품목 선택 -->
-            <div class="select-item col s12">
+            <div class="tab-menu col s12">
               <ul class="tabs">
-                <li class="tab col s3"><a class="active" href="#test1">Test 1</a></li>
-                <li class="tab col s3"><a href="#test2">Test 2</a></li>
-                <li class="tab col s3"><a href="#test3">Test 3</a></li>
-                <li class="tab col s3"><a href="#test4">Test 4</a></li>
-                <li class="tab col s3"><a href="#test5">Test 5</a></li>
-                <li class="tab col s3"><a href="#test6">Test 6</a></li>
-                <li class="tab col s3"><a href="#test7">Test 7</a></li>
-                <li class="tab col s3"><a href="#test8">Test 8</a></li>
+                <li class="tab col s3">
+                    <a class="active" href="#laundry">
+                        <img src="img/ic_laundry.png" alt="laundry"><div>물빨래</div>
+                    </a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#business">
+                        <img src="img/ic_business.png" alt="business"><div>비즈니스</div>
+                    </a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#top">
+                        <img src="img/ic_top.png" alt="top"><div>상의</div>
+                    </a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#bottom">
+                        <img src="img/ic_bottom.png" alt="bottom"><div>하의</div>
+                    </a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#outer">
+                        <img src="img/ic_outer.png" alt="outer"><div>아우터</div>
+                    </a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#etc">
+                        <img src="img/ic_etc.png" alt="etc"><div>기타</div>
+                    </a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#bedclothes">
+                        <img src="img/ic_bedclothes.png" alt="bedclothes"><div>이불</div>
+                    </a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#footwear">
+                        <img src="img/ic_footwear.png" alt="footwear"><div>신발</div>
+                    </a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#bag">
+                        <img src="img/ic_bag.png" alt="bag"><div>가방</div>
+                    </a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#add">
+                        <img src="img/ic_add.png" alt="add"><div>추가비용</div>
+                    </a>
+                </li>
               </ul>
             </div>
 
             <!-- 선택된 품목별 컨텐츠 -->
-            <div id="test1" class="col s12">Test 1</div>
-            <div id="test2" class="col s12">Test 2</div>
-            <div id="test3" class="col s12">Test 3</div>
-            <div id="test4" class="col s12">Test 4</div>
-            <div id="test5" class="col s12">Test 5</div>
-            <div id="test6" class="col s12">Test 6</div>
-            <div id="test7" class="col s12">Test 7</div>
-            <div id="test8" class="col s12">Test 8</div>  
+            <div class="contents">
+                <div id="laundry" class="col s12"><img src="" alt="laundry"></div>
+                <div id="business" class="col s12"><img src="img/tap_2.png" alt="business"></div>
+                <div id="top" class="col s12"><img src="img/tap_3.png" alt="top"></div>
+                <div id="bottom" class="col s12"><img src="img/tap_4.png" alt="bottom"></div>
+                <div id="outer" class="col s12"><img src="img/tap_5.png" alt="outer"></div>
+                <div id="etc" class="col s12"><img src="img/tap_6.png" alt="etc"></div>
+                <div id="bedclothes" class="col s12"><img src="img/tap_7.png" alt="bedclothes"></div>
+                <div id="footwear" class="col s12"><img src="img/tap_8.png" alt="footwear"></div>  
+                <div id="bag" class="col s12"><img src="img/tap_9.png" alt="bag"></div>  
+                <div id="add" class="col s12"><img src="img/tap_10.png" alt="add"></div>  
+            </div>
         </div>
 
         <div class="row">
