--- a/index.html
+++ b/index.html
@@ -38,11 +38,8 @@
          </nav>
         <!-- //상단바 -->
 
-        <div class="row">
-            <!-- 위치 선택 -->
-            <div class="col s12">위치 선택</div>
-            
-            <!-- 품목 선택 -->
+        <div class="row">            
+            <!-- 품목 탭 메뉴 -->
             <div class="tab-menu col s12">
               <ul class="tabs">
                 <li class="tab col s3">
@@ -99,22 +96,63 @@
             </div>
 
             <!-- 선택된 품목별 컨텐츠 -->
-            <div class="contents">
-                <div id="laundry" class="col s12"><img src="" alt="laundry"></div>
-                <div id="business" class="col s12"><img src="img/tap_2.png" alt="business"></div>
-                <div id="top" class="col s12"><img src="img/tap_3.png" alt="top"></div>
-                <div id="bottom" class="col s12"><img src="img/tap_4.png" alt="bottom"></div>
-                <div id="outer" class="col s12"><img src="img/tap_5.png" alt="outer"></div>
-                <div id="etc" class="col s12"><img src="img/tap_6.png" alt="etc"></div>
-                <div id="bedclothes" class="col s12"><img src="img/tap_7.png" alt="bedclothes"></div>
-                <div id="footwear" class="col s12"><img src="img/tap_8.png" alt="footwear"></div>  
-                <div id="bag" class="col s12"><img src="img/tap_9.png" alt="bag"></div>  
-                <div id="add" class="col s12"><img src="img/tap_10.png" alt="add"></div>  
+            <div class="contents-container">
+
+                <div id="laundry">
+                    <img src="" alt="laundry">
+                </div>
+
+                <div id="business">
+                    <img src="img/tap_2.png" alt="business">
+
+                    <!-- 핸들바나 EJS로 뺄 예정 -->
+                    <ul class="row">
+                        <li class= "col s12">
+                            <div class="col s8">
+                                <div class="col s12">
+                                    <div class="left">와이셔츠</div>
+                                    <div class="right">2,000</div>
+                                </div>
+                            </div>
+                            <div class="qty-box col s4">
+                                <span class="dec left-set">–</span>
+                                <span class="qty center-set">0</span>
+                                <span class="inc right-set">+</span>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+                <div id="top">
+                    <img src="img/tap_3.png" alt="top">
+                </div>
+                <div id="bottom">
+                    <img src="img/tap_4.png" alt="bottom">
+                </div>
+                <div id="outer">
+                    <img src="img/tap_5.png" alt="outer">
+                </div>
+                <div id="etc">
+                    <img src="img/tap_6.png" alt="etc">
+                </div>
+                <div id="bedclothes">
+                    <img src="img/tap_7.png" alt="bedclothes">
+                </div>
+                <div id="footwear">
+                    <img src="img/tap_8.png" alt="footwear">
+                </div>  
+                <div id="bag">
+                    <img src="img/tap_9.png" alt="bag">
+                </div>  
+                <div id="add">
+                    <img src="img/tap_10.png" alt="add">
+                </div>  
             </div>
         </div>
 
+        <!-- 주문 정보 -->
         <div class="row">
-            <div class="col s12">
+            <div class="order-info col s12">
                 <div class="col s8">
                     <div class="col s12">
                         <div class="left">품목</div>
@@ -125,7 +163,7 @@
                         <div class="right">0원</div>
                     </div>
                 </div>
-                <button class="btn waves-effect waves-light" type="submit">주문하기</button>
+                <button class="btn waves-effect waves-light col s4" type="submit">주문하기</button>
             </div>
         </div>
 
