--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="row">            
             <!-- 품목 탭 메뉴 -->
-            <div class="tab-menu col s12">
+            <div class="tab-menu">
               <ul class="tabs">
                 <li class="tab col s3">
                     <a class="active" href="#laundry">
@@ -111,7 +111,7 @@
                             <div class="col s8">
                                 <div class="col s12">
                                     <div class="left">와이셔츠</div>
-                                    <div class="right">2,000</div>
+                                    <div class="right">₩2,000</div>
                                 </div>
                             </div>
                             <div class="qty-box col s4">
