add logo, tab underline css

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <!-- 상단바 -->
         <nav class="nav-top" role="navigation">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo"><img src="" alt="logo"></a><!-- 로고 -->
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="tiny material-icons">menu</i></a><!-- 모바일 화면에서 보이는 햄버거아이콘 -->
+                <a href="#" class="brand-logo"><img src="img/logo.png" alt="logo"></a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                  <ul class="right hide-on-med-and-down"><!-- 데스크탑 화면 -->
                     <li><a href="#">주문하기</a></li>
                     <li><a href="#">주문조회</a></li>
@@ -44,7 +44,7 @@
               <ul class="tabs">
                 <li class="tab col s3">
                     <a class="active" href="#laundry">
-                        <img src="img/ic_laundry.png" alt="laundry"><div>물빨래</div>
+                        <img src="img/ic_laundry.png" alt="laundry"><div>생활빨래</div>
                     </a>
                 </li>
                 <li class="tab col s3">
@@ -99,14 +99,13 @@
             <div class="contents-container">
 
                 <div id="laundry">
-                    <img src="" alt="laundry">
+                    <img src="img/tap_1.png" alt="laundry">
                 </div>
 
                 <div id="business">
                     <img src="img/tap_2.png" alt="business">
 
-                    <!-- 핸들바나 EJS로 뺄 예정 -->
-                    <ul class="row">
+                    <!-- <ul class="row">
                         <li class= "col s12">
                             <div class="col s8">
                                 <div class="col s12">
@@ -120,7 +119,7 @@
                                 <span class="inc right-set">+</span>
                             </div>
                         </li>
-                    </ul>
+                    </ul> -->
 
                 </div>
                 <div id="top">
