--- a/write.html
+++ b/write.html
@@ -43,7 +43,7 @@
             <div class="top col s12">주문서 작성</div>
 
             <div class="section col s12">
-                <div>주문 내역</div>
+                <h5>주문 내역</h5>
                 <div class="divider"></div>
 
                 <table>
@@ -85,12 +85,11 @@
                         </tbody>
                 </table>
 
-                <div class="divider"></div>
-                <button class="btn waves-effect waves-light col s4" type="submit">변경/추가</button>
+                <button class="cancel-btn btn waves-effect waves-light col s4" type="submit">변경/추가</button>
             </div>
             
             <div class="section col s12">
-                <div>수거 및 배달 시간 선택</div>
+                <h5>수거 및 배달 시간 선택</h5>
                 <div class="col s12">
                     <div>수거</div>
                     <input type="date" name="date">
@@ -104,7 +103,7 @@
             </div>
 
             <div class="section col s12">
-                <div>주문 정보 입력</div>
+                <h5>주문 정보 입력</h5>
                 <form class="col s12">
                     <div class="row">
                         <div class="input-field col s12">
