주문서 작성 페이지 css

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="contents-container">
 
                 <div id="laundry">
-                    <img src="img/tap_1.png" alt="laundry">
+                    <img src="img/tab_1.png" alt="laundry">
                 </div>
 
                 <div id="business">
