생활 물빨래 css

--- a/index.html
+++ b/index.html
@@ -99,7 +99,15 @@
             <div class="contents-container">
 
                 <div id="laundry">
-                    <img src="img/tab_1.png" alt="laundry">
+                    <img class="laundry-img" src="img/tab_1.png" alt="laundry">
+                    <div class="laundry-qty-container">
+                        <div class="laundry-qty qty-box col s4">
+                            <span class="dec left-set">–</span>
+                            <span class="qty center-set">0</span>
+                            <span class="inc right-set">+</span>
+                        </div>
+                        <div class="col s12">₩10,000/수거가방</div>
+                    </div>
                 </div>
 
                 <div id="business">
