--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div id="laundry">
                     <img class="laundry-img" src="img/tab_1.png" alt="laundry">
                     <div class="laundry-qty-container">
-                        <div class="laundry-qty qty-box col s4">
+                        <div class="laundry-qty qty-box col s3">
                             <span class="dec left-set">–</span>
                             <span class="qty center-set">0</span>
                             <span class="inc right-set">+</span>
@@ -113,21 +113,21 @@
                 <div id="business">
                     <img src="img/tap_2.png" alt="business">
 
-                    <!-- <ul class="row">
+                    <ul class="row">
                         <li class= "col s12">
                             <div class="col s8">
                                 <div class="col s12">
-                                    <div class="left">와이셔츠</div>
+                                    <div class="left">text</div>
                                     <div class="right">₩2,000</div>
                                 </div>
                             </div>
-                            <div class="qty-box col s4">
+                            <div class="qty-box col s3">
                                 <span class="dec left-set">–</span>
                                 <span class="qty center-set">0</span>
                                 <span class="inc right-set">+</span>
                             </div>
                         </li>
-                    </ul> -->
+                    </ul>
 
                 </div>
                 <div id="top">
@@ -170,7 +170,7 @@
                         <div class="right">0원</div>
                     </div>
                 </div>
-                <button class="btn waves-effect waves-light col s4" type="submit">주문하기</button>
+                <button class="btn waves-effect waves-light col s3" type="submit">주문하기</button>
             </div>
         </div>
 
