--- a/complete.html
+++ b/complete.html
@@ -41,23 +41,20 @@
 
         
         <div class="row">
-          <div class="bg_box">
-            <img class="bg_img" src="img/bg_complete.png">
-          </div>
-            <div class="wrapper">
-              <img src="img/ic_complete.png">
-              <div class="sp_content">
-                <div class="msg">주문이<br>접수되었습니다.</div>
-                <p>주문 관련 질문 혹은 변경사항이 있으신 경우,<br>크린바스켓 웹페이지에 있는 1:1 문의<br>혹은 고객센터(1588-XXXX)로 문의 주시면<br>성심성의껏 답변 해드리겠습니다.</p>
-
-
-                <div class="divider"></div>
-                <div>크린바스켓 앱을 이용하시면 더욱 편리하게 이용하실 수 있습니다.</div>
-                <button class="btn waves-effect waves-light col s12" type="submit">앱다운로드</button> 
-              </div>
+            <div class="bg_box">
+                <img class="bg_img" src="img/bg_complete.png">
+            </div>
+            <div class="content-wrapper">
+                <div class="content">
+                    <img src="img/ic_complete.png">
+                    <div class="title">주문이<br>접수되었습니다.</div>
+                    <p>주문 관련 질문 혹은 변경사항이 있으신 경우,<br>크린바스켓 웹페이지에 있는 1:1 문의<br>혹은 고객센터(1588-XXXX)로 문의 주시면<br>성심성의껏 답변 해드리겠습니다.</p>
+                    <div class="divider"></div>
+                    <div class="app-info">크린바스켓 앱을 이용하시면 더욱 편리하게 이용하실 수 있습니다.</div>
+                    <button class="app-btn btn waves-effect waves-light" type="submit">앱다운로드</button> 
+                </div>
             </div>
         </div>
-
 
         <footer class="page-footer">
             <div class="row">
