주문 조회 페이지 html/css 완료

--- a/write.html
+++ b/write.html
@@ -113,7 +113,7 @@
                           <label for="name">성함</label>
                         </div>
                         <div class="input-field col s7">
-                          <input id="phone" type="tel" class="validate">
+                          <input id="phone" type="number" class="validate">
                           <label for="phone">휴대폰 번호</label>
                         </div>
                     </div>
