--- a/write.html
+++ b/write.html
@@ -107,7 +107,7 @@
             <div class="section col s12">
                 <h5 class="headline-info">주문 정보 입력</h5>
                 <form>
-                    <div class="row">
+                    <div class="input-wrapper">
                         <div class="input-field col s5">
                           <input id="name" type="text" class="validate">
                           <label for="name">성함</label>
