ajax get item-list

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <li class= "col s12">
                             <div class="col s8">
                                 <div class="col s12">
-                                    <div class="left">text</div>
+                                    <div class="left">test</div>
                                     <div class="right">₩2,000</div>
                                 </div>
                             </div>
