--- a/trace.html
+++ b/trace.html
@@ -59,8 +59,10 @@
             <div class="modal-content">
                 <i class="close-btn right material-icons">close</i>
                 <div class="caption center">최근 주문 조회</div>
-
-    
+                    <img src="img/ic_trace.png">
+                    <div class="title">크린파트너<br>배정 중입니다.</div>
+                    <img src="img/ic_state1.png">
+                    <div class="divider"></div>
             </div>
         </div>
 
