print item-list

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div id="business">
                     <img src="img/tap_2.png" alt="business">
 
-                    <ul class="row">
+                    <!-- <ul class="row">
                         <li class= "col s12">
                             <div class="col s8">
                                 <div class="col s12">
@@ -127,7 +127,7 @@
                                 <span class="inc right-set">+</span>
                             </div>
                         </li>
-                    </ul>
+                    </ul> -->
 
                 </div>
                 <div id="top">
