--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
                 <div id="business" class="contents">
                     <img src="img/tap_2.png" alt="business">
 
-                    <!-- <ul class="row">
+                   <!--  <ul class="row">
                         <li class= "col s12">
-                            <div class="col s8">
+                            <div class="item col">
                                 <div class="col s12">
                                     <div class="left">test</div>
                                     <div class="right">₩2,000</div>
                                 </div>
                             </div>
-                            <div class="qty-box col s3" data-price="2000">
+                            <div class="qty-box col" data-price="2000">
                                 <span class="dec left-set">–</span>
                                 <span class="qty center-set">0</span>
                                 <span class="inc right-set">+</span>
@@ -160,9 +160,8 @@
         </div>
 
         <!-- 주문 정보 -->
-        <div class="row">
-            <div class="order-info col s12">
-                <div class="col s8">
+        <div class="order-info row">
+                <div class="cart col">
                     <div class="col s12">
                         <div class="left">품목</div>
                         <div class="right total-number">0개</div>
@@ -172,8 +171,7 @@
                         <div class="right total-price">0원</div>
                     </div>
                 </div>
-                <button class="btn waves-effect waves-light col s3" type="submit">주문하기</button>
-            </div>
+                <button class="cart-btn btn waves-effect waves-light col" type="submit">주문하기</button>
         </div>
 
         <footer class="page-footer">
