--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <img src="img/tap_2.png" alt="business">
 
                    <!--  <ul class="row">
-                        <li class= "col s12">
+                        <li class= "item-box col s12">
                             <div class="item col">
                                 <div class="col s12">
                                     <div class="left">test</div>
@@ -164,7 +164,7 @@
                 <div class="cart col">
                     <div class="col s12">
                         <div class="left">품목</div>
-                        <div class="right total-number">0개</div>
+                        <div class="right total-number" data-total-number="0">0개</div>
                     </div>
                     <div class="col s12">
                         <div class="left">합계</div>
