--- a/write.html
+++ b/write.html
@@ -45,7 +45,7 @@
             <div class="section col s12">
                 <h5>주문 내역</h5>
                 <div class="divider"></div>
-
+                <div id="test"></div>
                 <table>
                         <thead>
                           <tr>
@@ -155,6 +155,7 @@
     	<!--Import jQuery before materialize.js-->
     	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     	<script type="text/javascript" src="js/materialize.min.js"></script>
-    	<script src="js/index.js"></script>
+      <script src="js/index.js"></script>
+    	<script src="js/write.js"></script>
 	</body>
 </html>
