--- a/write.html
+++ b/write.html
@@ -45,7 +45,6 @@
             <div class="section col s12">
                 <h5>주문 내역</h5>
                 <div class="divider"></div>
-                <div id="test"></div>
                 <table>
                         <thead>
                           <tr>
@@ -55,8 +54,8 @@
                           </tr>
                         </thead>
 
-                        <tbody>
-                          <tr>
+                        <tbody id="show-cart">
+                          <!-- <tr>
                             <td>생활 물빨래</td>
                             <td>2</td>
                             <td>₩20,000</td>
@@ -81,7 +80,7 @@
                             <td>합계</td>
                             <td></td>
                             <td>₩91,000</td>
-                          </tr>
+                          </tr> -->
                         </tbody>
                 </table>
 
