--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
 
                 <div id="laundry" class="contents">
                     <img class="laundry-img" src="img/tab_1.png" alt="laundry">
-                    <div class="laundry-qty-container">
+                    <div class="laundry-qty-container item-box">
                         <div class="laundry-qty qty-box col s3" data-price="10000">
                             <span class="dec left-set">–</span>
                             <span class="qty center-set">0</span>
                             <span class="inc right-set">+</span>
+                            <div class="item-name" style="display: none">생활 물빨래</div>
                             <div class="subtotal-price" style="display: none">0</div>
                         </div>
                         <div class="col s12">₩10,000/수거가방</div>
@@ -118,7 +119,7 @@
                         <li class= "item-box col s12">
                             <div class="item col">
                                 <div class="col s12">
-                                    <div class="left">test</div>
+                                    <div class="left item-name">test</div>
                                     <div class="right">₩2,000</div>
                                 </div>
                             </div>
