--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                 <div id="business" class="contents">
                     <img src="img/tap_2.png" alt="business">
 
-                   <!--  <ul class="row">
-                        <li class= "item-box col s12">
+                   <!--  <ul class="item-box row">
+                        <li class= "col s12">
                             <div class="item col">
                                 <div class="col s12">
                                     <div class="left item-name">test</div>
