최근 주문 조회

--- a/trace.html
+++ b/trace.html
@@ -57,12 +57,32 @@
         <!-- 모달 -->
         <div id="modal-trace" class="modal">
             <div class="modal-content">
-                <i class="close-btn right material-icons">close</i>
+                <i class="close-btn material-icons">close</i>
                 <div class="caption center">최근 주문 조회</div>
-                    <img src="img/ic_trace.png">
-                    <div class="title">크린파트너<br>배정 중입니다.</div>
-                    <img src="img/ic_state1.png">
-                    <div class="divider"></div>
+                <img src="img/ic_trace.png">
+                <div class="center subtitle">크린파트너<br>배정 중입니다.</div>
+                <ul class="progress_bar">
+                    <li class="activated"><span></span></li>
+                    <li class="activated"><span></span></li>
+                    <li class="activated"><span></span></li>
+                  </ul>
+                </div>
+                <!-- <img src="img/ic_state1.png"> -->
+                <div class="divider"></div>
+                <div>
+                    <div>
+                        <span>주소</span>
+                        <span>서울특별시 관악구 봉천동 1708 107동 1304</span>
+                    </div>
+                    <div>
+                        <span>수거시간</span>
+                        <span>2016-07-27 20:30</span>
+                    </div>
+                    <div>
+                        <span>배달시간</span>
+                        <span>2016-07-30 10:00</span>
+                    </div>
+                </div>
             </div>
         </div>
 
