js 리팩토링중

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          </nav>
         <!-- //상단바 -->
 
-        <div class="row">            
+        <div class="row main">            
             <!-- 품목 탭 메뉴 -->
             <div class="tab-menu">
               <ul class="tabs">
