category 클릭 이벤트

--- a/index.html
+++ b/index.html
@@ -42,52 +42,52 @@
             <!-- 품목 탭 메뉴 -->
             <div class="tab-menu">
               <ul class="tabs">
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="1">
                     <a class="active" href="#laundry">
                         <img src="img/ic_laundry.png" alt="laundry"><div>생활빨래</div>
                     </a>
                 </li>
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="2">
                     <a href="#business">
                         <img src="img/ic_business.png" alt="business"><div>비즈니스</div>
                     </a>
                 </li>
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="3">
                     <a href="#top">
                         <img src="img/ic_top.png" alt="top"><div>상의</div>
                     </a>
                 </li>
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="4">
                     <a href="#bottom">
                         <img src="img/ic_bottom.png" alt="bottom"><div>하의</div>
                     </a>
                 </li>
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="5">
                     <a href="#outer">
                         <img src="img/ic_outer.png" alt="outer"><div>아우터</div>
                     </a>
                 </li>
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="6">
                     <a href="#etc">
                         <img src="img/ic_etc.png" alt="etc"><div>기타</div>
                     </a>
                 </li>
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="7">
                     <a href="#bedclothes">
                         <img src="img/ic_bedclothes.png" alt="bedclothes"><div>이불</div>
                     </a>
                 </li>
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="8">
                     <a href="#footwear">
                         <img src="img/ic_footwear.png" alt="footwear"><div>신발</div>
                     </a>
                 </li>
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="9">
                     <a href="#bag">
                         <img src="img/ic_bag.png" alt="bag"><div>가방</div>
                     </a>
                 </li>
-                <li class="tab col s3">
+                <li class="tab col s3" data-category="10">
                     <a href="#add">
                         <img src="img/ic_add.png" alt="add"><div>추가비용</div>
                     </a>
@@ -195,6 +195,9 @@
     	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     	<script type="text/javascript" src="js/materialize.min.js"></script>
         <script src="js/index.js"></script>
-    	<script src="js/order.js"></script>
+        <!-- <script src="js/order.js"></script> -->
+        <script src="js/app.js"></script>
+        <script src="js/storage.js"></script>
+        <script src="js/view.js"></script>
 	</body>
 </html>
